kubernetes_yaml/chatbot/chatbot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot
  labels:
    app: chatbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot
  template:
    metadata:
      labels:
        app: chatbot
    spec:
      serviceAccountName: chatbot-sa
      containers:
      - name: chatbot-inference
        image: quay.io/sallyom/chatbot:vllm
        ports:
          - containerPort: 8501
        securityContext:
          runAsNonRoot: true
