kubernetes_yaml/chatbot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-service
  labels:
    app: chatbot
spec:
  selector:
    app: chatbot
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
